# thorium

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  contributors.md
.github/workflows/: deploy.yml  tools.yml
agent/: Cargo.toml
agent/src/: args.rs
agent/src/libs/: agents.rs  cache.rs  children.rs  helpers.rs  mod.rs  results.rs  target.rs  worker.rs
agent/src/libs/agents/: baremetal.rs  cmd.rs  k8s.rs  setup.rs
api/: Cargo.toml  thorium-template.yml
api/docs/: book.toml
api/src/: ai.rs  client.rs  conf.rs  lib.rs  test_utilities.rs
api/tests/: basic.rs  files.rs  groups.rs  images.rs  jobs.rs  network_policies.rs  pipelines.rs  reactions.rs  system.rs  thorium-testing.yml
base/: Dockerfile
base/manylinux_2_28_x86_64/: Dockerfile
cart-rs/: Cargo.toml
cart-rs/src/: errors.rs  lib.rs
cart-rs/src/libs/: footer.rs  header.rs
docs/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/admins/: admins.html  bans_admins.html  common_issues.html  delete_group.html  delete_user.html  notifications_admins.html  operations.html  troubleshoot_user_issues.html
docs/architecture/: agent.html  api.html  architecture.html  event-handler.html  reactor.html  scaler.html  tracing.html
docs/developers/: add_images.html  bans.html  build_pipelines.html  children.html  configuring_images.html  developers.html  generators.html  images.html  notifications.html  reaction_status.html  viewing_reaction_logs.html
docs/getting_started/: adding_editing_groups.html  getting_started.html  login.html  registration.html  roles_permissions.html  thorctl.html
docs/help/: contact_us.html  faq.html  help.html
docs/users/: commenting.html  downloading.html  revoking_token.html  searching_results.html  spawning_reactions.html  tagging_files.html  uploading_files.html  users.html  viewing_files.html  viewing_results.html
event-handler/: Cargo.toml
event-handler/src/libs/: cache.rs  worker.rs
k8s/patches/: ingress-patch.yml
k8s/thorium/: thorium-cluster-example.yml
megathor/: .gitignore  README.md  deploy.yml  offline-stage.yml  requirements.txt
megathor/inventory/: local.ini  remote-api.ini
megathor/scripts/: get-images.bash
minithor/: .gitignore  README.md  cleanup  delete  deploy  expose  expose-dev  get-config  install  install.linux  install.mac-m1  minithor  start  stop  thorium-cluster.yml.example
operator/: Cargo.toml
operator/src/: k8s.rs  main.rs
operator/src/app/: helpers.rs  users.rs
operator/src/k8s/: controller.rs  crds.rs  deployments.rs  nodes.rs  operate.rs  secrets.rs  services.rs  watchers.rs
operator/src/k8s/watchers/: mcp.rs  nodes.rs  thorium_cr.rs
python/thorpy/: Cargo.toml  README.md  pyproject.toml  thorium.pyi
python/thorpy-stubs/: Cargo.toml  README.md
python/thorpy/src/: lib.rs
reactor/: Cargo.toml
scaler/: Cargo.toml
scaler/src/libs/: cache.rs  helpers.rs  scaler.rs  schedulers.rs
scaler/src/libs/schedulers/: allocatable.rs  direct.rs  dry_run.rs  k8s.rs  requisitions.rs
scaler/src/libs/schedulers/allocatable/: pool.rs
scaler/src/libs/schedulers/k8s/: cluster.rs  containers.rs  nodes.rs  pods.rs
search-streamer/: Cargo.toml
search-streamer/src/: index.rs  sources.rs  streamer.rs  worker.rs
search-streamer/src/sources/: results.rs  tags.rs  utils.rs
search-streamer/src/stores/: elastic.rs
skills/: THORIUM.md
thoradm/: Cargo.toml
thoradm/src/: args.rs  census.rs
thoradm/src/args/: backup.rs
thoradm/src/backup/: new_backup.rs  restore.rs  s3.rs  tables.rs
thoradm/src/backup/controllers/: backup.rs  restore.rs
thoradm/src/backup/tables/: associations.rs  comments.rs  commits.rs  entities.rs  network_policies.rs  nodes.rs  notifications.rs  repos.rs  results.rs  s3_ids.rs  samples_list.rs  tags.rs
thorctl/: Cargo.toml
thorctl/src/: args.rs  handlers.rs  main.rs  utils.rs
thorctl/src/args/: ai.rs  cart.rs  files.rs  groups.rs  images.rs  network_policies.rs  pipelines.rs  reactions.rs  repos.rs  results.rs  tags.rs  toolbox.rs  uncart.rs
thorctl/src/args/traits/: describe.rs  search.rs
thorctl/src/handlers/: ai.rs  cart.rs  controllers.rs  files.rs  images.rs  monitor.rs  pipelines.rs  progress.rs  reactions.rs  results.rs  run.rs  toolbox.rs  uncart.rs
thorctl/src/handlers/ai/: chat.rs  services.rs  summary.rs
thorctl/src/handlers/ai/chat/: chat.rs  components.rs  events.rs  home.rs  tabs.rs
thorctl/src/handlers/ai/chat/components/: banner.rs  chat_worker.rs  message_log.rs  shortcut_menu.rs  status_bar.rs  text_box.rs  theme.rs
thorctl/src/handlers/ai/services/: openai.rs
thorctl/src/handlers/files/: download.rs
thorctl/src/handlers/images/: edit.rs  export.rs  import.rs
thorctl/src/handlers/pipelines/: export.rs  import.rs
thorctl/src/handlers/reactions/: create.rs  delete.rs
thorctl/src/handlers/repos/: download.rs  ingest.rs
thorctl/src/handlers/results/: upload.rs
thorctl/src/handlers/toolbox/: build.rs  categorize.rs  create.rs  editor.rs  export.rs  import.rs  init.rs  manifest.rs  merge.rs  prompt.rs  shared.rs  update.rs
thorctl/src/handlers/toolbox/update/: images.rs  pipelines.rs
thorctl/src/utils/: banner.rs  diff.rs  fs.rs  reactions.rs
thorctl/src/utils/diff/: images.rs
thorium-derive/: Cargo.toml
thorium-derive/src/: lib.rs  python.rs  sync.rs  utils.rs
thorium-derive/src/python/: pyclass.rs  pyenum.rs
thorium-derive/src/sync/: sync_struct.rs  sync_trait.rs
tools/: README.md  config.toml  manifest.toml  toolbox.json
tools/images/sandia.gov/auto-volatility3/generator/: Cargo.toml  Dockerfile  auto-volatility3.json  manifest.toml
tools/images/sandia.gov/auto-volatility3/generator/rules/: linux.yar  windows.yar
tools/images/sandia.gov/auto-volatility3/generator/src/: args.rs  main.rs
tools/scripts/: build-actions-matrix.py  (+2 more)
ui/: .env.preview  .eslintrc.js  .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  jsconfig.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.prod.json  vite.config.ts  vitest.config.ts
(+1141 files in other folders)
