[workspace]
resolver = "2"

members = [
  "api",
  "scaler",
  "agent",
  "thorctl",
  "reactor",
  "event-handler",
  "thoradm",
  "search-streamer",
  "operator",
  "thorium-derive",
  "cart-rs"
]

[workspace.package]
version = "1.3.2"
authors = ["mcarson <mcarson@sandia.gov>", "gmbaker <gmbaker@sandia.gov>", "jehamza <jehamza@sandia.gov>"]
edition = "2024"

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
thorium-api = { version= "1.3.2", path="api", default-features = false }
thorium-derive = { version = "1.3.2", path = "thorium-derive" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream", "blocking"] }
tokio = { version = "1.45", features = ["full"] }
kube = { git = "https://github.com/kube-rs/kube.git", branch = "main", features = ["rustls-tls", "derive", "config", "client", "runtime"] }
kube-derive = { git = "https://github.com/kube-rs/kube.git", branch = "main" }
k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi.git", rev = "e9a9eaf", default-features = false, features = ["v1_30"] }
schemars = { version = "1.0.4", features = ["uuid1"] }
tracing = { version = "0.1" }
opentelemetry = { version = "0.30", features = ["trace"] }
clap = { version = "4", features = ["derive", "wrap_help", "string"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cart-rs = { version = "1.2.3", path = "cart-rs"}
