[package]
name = "cart-rs"
version = "1.2.5"
description = "A cart library that can cart/uncart data in a high performance streaming fashion"
readme = "README.md"
license-file = "../LICENSE"
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
tokio = { version = "1.45", features = ["full", "fs", "io-util"] }
bincode = "2.0"
flate2 = "1"
miniz_oxide = "0.8"
rc4 = "0.1"
generic-array = "0.14"
bytes = "1.10"
futures-core = "0.3"
pin-project = "1.1"
tokio-test = "0.4"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
futures-task = "0.3"
