[package]
name = "thorium-event-handler"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thorium-api = { workspace = true, features = ["client", "trace"] }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { workspace = true }
futures = { version = "0.3.31" }
futures-locks = { version = "0.7.1" }
