[package]
name = "thorium-operator"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Helps deploy Thorium clusters in K8s."
license-file = "../LICENSE"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
thorium-api = { workspace=true, features = ["scylla-utils", "client", "k8s"] }
reqwest = { workspace=true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
rustls = "0.23.27"
kube = { workspace = true }
kube-derive = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
bytestring = { version = "1.4" }
rand = { version = "0.9" }
base64 = { version = "0.22" }
chrono = { workspace = true }
openssl = { workspace = true }
aws-types = { version = "1.3" }
aws-sdk-s3 = { version = "1.90", features = ["rt-tokio", "behavior-version-latest"] }
aws-credential-types = { version = "1.2" }
generic-array = { version = "0.14" }
