[package]
name = "thorium-scaler"
resolver = "2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Scales workers across clusters in Thorium."
license-file = "../LICENSE"

[features]
# include test utilities for the Thorium scaler
test-utilities = []

# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
thorium-api = { workspace = true, features = ["client", "k8s", "trace"] }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
clap = { workspace = true }
itertools = "0.14.0"
rand = "0.9.1"
config = { version = "0.15", features = ["yaml"] }
kube = { workspace = true }
k8s-openapi = { workspace = true }
chrono = { workspace = true }
async-recursion = "1"
regex = "1"
dirs = "6"
base64 = "0.22"
rayon = "1.10"
bincode = "2.0.1"
uuid = { version = "1", features = ["serde", "v4"] }
openssl = "*"
tracing = {  workspace = true }
rustls = "0.23"
hashbrown = "0.15"

[dev-dependencies]
thorium-scaler = { path = ".", features = ["test-utilities"]}
thorium-api = { workspace = true, features = ["client", "k8s", "trace", "test-utilities"] }
serial_test = "3"
