[package]
name = "thorium-search-streamer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
thorium-api = { workspace = true , default-features=false, features = ["client", "kanal-err", "trace", "scylla-utils"]}
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
kanal = "0.1.1"
async-trait = "0.1"
url = "2"
elasticsearch = "9.0.0-alpha.1"
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
tracing = { workspace = true }
opentelemetry = { workspace = true }
openssl = { workspace = true }
scylla = { version = "1.2" }
itertools = "0.14"
redis = { version = "0.23", default-features = false, features = ["tokio-comp"] }
unicode-segmentation = "1.12"
bytesize = "2.1"

[dev-dependencies]
rand = "0.9"
