[package]
name = "thoradm"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A CLI tool for performing administrative tasks in Thorium."
license-file = "../LICENSE"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]


[dependencies]
thorium-api = { workspace = true, features = ["scylla-utils", "rkyv-support", "client"] }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
scylla = { version = "1.2", features = ["chrono-04"] }
futures = { version = "0.3.31" }
async-trait = "0.1"
itertools = { version = "0.14" }
chrono = { workspace = true, features = ["serde", "rkyv", "rkyv-validation"] }
uuid = { version = "1", features = ["serde", "v4"] }
ahash = "0.8"
rkyv = { version = "=0.7.43", features = ["arbitrary_enum_discriminant", "uuid", "validation"]}
bytes = "1.10"
kanal = "0.1.1"
indicatif = { version = "0.17", features = ["tokio"] }
num-format = "0.4"
bytecheck = "=0.6.11"
clap = { workspace = true }
config = { version = "0.15", features = ["yaml"] }
dialoguer = "0.11"
sha2 = "0.10"
data-encoding = "2.9"
openssl = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-types = "1.3"
aws-sdk-s3 = { version = "1.90", features = ["rt-tokio", "behavior-version-latest"] }
aws-smithy-http = "0.62"
aws-credential-types = "1.2"
async-walkdir = "2.1"
dirs = "6"
strum = { version = "0.27", features = ["derive"] }
serde_yaml = "0.9"
bb8-redis = "0.24"
redis = { version = "0.32.1", default-features = false, features = ["tokio-comp", "script"] }
