[package]
name = "thorctl"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "A CLI tool for interacting with Thorium."
license-file = "../LICENSE"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
thorium-api = { workspace = true, features = ["client", "kanal-err", "dialoguer-err", "openai", "rmcp-err"]}
clap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["io-util"] }
config = { version = "0.15", features = ["yaml"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde_derive = { workspace = true }
colored = "3"
owo-colors = "4"
http = "1.3"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2.5"
async-walkdir = "2"
futures = "0.3"
generic-array = "0.14"
lazy_static = "1.5"
sha2 = "0.10"
data-encoding = "2.9"
cart-rs = { workspace = true }
regex = "1.11"
git2 = "0.20"
gix = "0.72"
itertools = "0.14"
chrono = { workspace = true, features = ["serde", "rkyv", "rkyv-validation"] }
url = "2"
elasticsearch = "9.0.0-alpha.1"
async-trait = "0.1"
openssl = { workspace = true }
rpassword = "7.4"
indicatif = "0.17"
rand = "0.9.1"
kanal = "0.1.1"
semver = { version = "1", features = ["serde"] }
dialoguer = "0.11"
dirs = "6"
cfg-if = "1"
reqwest = { workspace = true , default-features = false, features = ["rustls-tls"] }
rmcp = { version = "0.8", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "reqwest"]}
openai-api-rs = "8"
