[package]
name = "thorium-derive"
resolver = "2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Derives useful functions and traits for Thorium."
license-file = "../LICENSE"

[lib]
name = "thorium_derive"
path = "src/lib.rs"
proc-macro = true

[features]

sync = []

python = ["sync"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.21"
