[project]
name = "thorium"
description = "Thorium synchronous client"
authors = [
  { name="Michael Carson", email="mcarson@sandia.gov" },
  { name="Gavin Baker", email="gmbaker@sandia.gov" },
  { name="Jake Hamzawi", email="jehamza@sandia.gov" },
]
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
include = [{ path = "thorium.pyi", format = ["sdist", "wheel"] }]
