[package]
name = "auto-volatility3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "string"] }
thorium-api = { git="https://github.com/cisagov/thorium.git", default-features = false, features = ["client"] }
tokio = { version = "1.45", features = ["full"] }
yara-x = "1.8"
sha2 = "0.10"
hex = "0.4"
bytesize = "2"
dirs = "6"
uuid = "1"
serde = "1"
serde_json = "1"
